salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__alignment_pane_dense_fragmented_ruler.snap
---
source: salti/src/ui/alignment_pane.rs
assertion_line: 871
expression: "render_alignment_pane_text(&alignment, &ColumnStatsCache::default(),\nRect::new(0, 0, 100, 12), 0, 0,)"
---
┌Alignment──────────────────────────────────────────────────────────────────────┐
│1    10     20                                                                 │
│. ~~~~~~~~~~~~~                                                                │
│CACACACACACACACA                                                               │
│CACACACACACACACA                                                               │
│CACACACACACACACA                                                               │
│                                                                               │
└───────────────────────────────────────────────────────────────────────────────┘
