salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__alignment_pane_pinned_and_fragmented.snap
---
source: salti/src/ui/alignment_pane.rs
assertion_line: 641
expression: "render_alignment_pane_text(&alignment, &ColumnStatsCache::default(),\nRect::new(0, 0, 100, 12),)"
---
┌Alignment──────────────────────────────────────────────────────────────────────┐
│1    10                                                                        │
│. ›   |    .                                                                   │
│CATCATCATCATCAT                                                                │
│CATCATCATCATCAT                                                                │
│───────────────────────────────────────────────────────────────────────────────│
│CATCATCATCATCAT                                                                │
└───────────────────────────────────────────────────────────────────────────────┘
