salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__alignment_pane_pinned_with_vertical_scroll.snap
---
source: salti/src/ui/panes/alignment.rs
expression: "render_alignment_pane_text(&alignment, &ColumnStatsCache::default(),\nRect::new(0, 0, 100, 10), 2, 0,)"
---
┌───────────────────────────────────────────────────────────────────────────────┐
│1       10                                                                     │
│.   .    |    .                                                                │
│CATCATCATCATCATCAT                                                             │
│───────────────────────────────────────────────────────────────────────────────│
└───────────────────────────────────────────────────────────────────────────────┘
