salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__alignment_pane_raw_diff_consensus.snap
---
source: salti/src/ui/panes/alignment.rs
expression: "render_alignment_pane_text(&alignment, &metrics, Rect::new(0, 0, 100, 12), 0,\n0,)"
---
┌───────────────────────────────────────────────────────────────────────────────┐
│1       10                                                                     │
│.   .    |    .                                                                │
│..................                                                             │
│......G...........                                                             │
│............G.....                                                             │
│                                                                               │
└───────────────────────────────────────────────────────────────────────────────┘
