salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__alignment_pane_scrolled_with_scrollbar.snap
---
source: salti/src/ui/panes/alignment.rs
expression: "render_alignment_pane_text(&alignment, &ColumnStatsCache::default(),\nRect::new(0, 0, 60, 12), 0, 10,)"
---
┌───────────────────────────────────────────────┐
│        20        30                           │
│    .    |    .    |    .                      │
│ATCATCATCATCATCATCATCATCAT                     │
│ATCATCATCATCATCATCATCATCAT                     │
│ATCATCATCATCATCATCATCATCAT                     │
│                                               │
└───────────▬▬▬─────────────────────────────────┘
