salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__alignment_pane_with_local_feature_track.snap
---
source: salti/src/ui/panes/alignment.rs
assertion_line: 520
expression: "render_alignment_pane_text_with_gff(&alignment, &ColumnStatsCache::default(),\nSome(&gff), Rect::new(0, 0, 100, 12), 0, 0,)"
---
┌───────────────────────────────────────────────────────────────────────────────┐
│     Spike   →                                                                 │
│1       10                                                                     │
│.   .    |    .                                                                │
│CATCATCATCATCATCAT                                                             │
│CATCATCATCATCATCAT                                                             │
│CATCATCATCATCATCAT                                                             │
└───────────────────────────────────────────────────────────────────────────────┘
