salti/src/ui/panes/snapshots/salti__ui__panes__alignment__tests__no_columns.snap
---
source: salti/src/ui/panes/alignment.rs
expression: render_full(&session)
---
┌───────────────────────────────────────────────────────────────────────────────┐
│                                                                               │
│                                                                               │
│                                                                               │
│                                                                               │
│                             No columns to display                             │
│                                                                               │
└───────────────────────────────────────────────────────────────────────────────┘
